# presaber

./: .gitignore  pyproject.toml
app/: main.py
app/api/: router.py
app/api/routes/: results.py
app/domain/entities/: base_entity.py  municipio.py
app/domain/ports/: base_crud_repository.py  estudiante_repository.py
app/domain/services/: base_crud_service.py
app/errors/: base.py  service.py
app/schemas/: Resultado.py
app/services/: solution.py
